# UCAS-BigData-CourseAssignment

./: .gitignore  README.md
UCAS_beamer/: beamersapienza.nav
UCAS_beamer/assets/: background.psd  background_negative.psd
bigdatatech2025/: client.py  test_flask.py
kv-store/: .gitignore  Cargo.toml  OPENRAFT_ARCHITECTURE.md  clean.sh  start.sh  test.sh
kv-store/src/: app.rs  lib.rs  typ.rs
kv-store/src/network/: api.rs  management.rs  raft.rs
kv-store/src/openraft_network/: mod.rs
kv-store/src/store/: log_store.rs  mod.rs
meta-server/: api.md  node_server.py  proxy_server.py
ppt/: beamersapienza.tex  beamersapienza.vrb
