[package]
name = "kv-store"
version = "0.1.0"
edition = "2024"

[dependencies]
openraft = { path = "./openraft/openraft", features = ["serde", "type-alias"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.114", features = ["derive"] }
serde_json = { version = "1.0.57" }
tokio = { version = "1.35.1", features = ["full"] }
tracing = { version = "0.1.40" }

actix-web = { version = "4.0.0-rc.2" }
clap = { version = "4.1.11", features = ["derive", "env"] }
futures = { version = "0.3" }
rocksdb = { version = "0.22.0" }
tracing-subscriber = { version = "0.3.0", features = ["env-filter"] }

byteorder  = { version = "1.4.3" }
rand       = { version = "0.9" }


[dev-dependencies]
maplit = { version = "1.0.2" }
tempfile = { version = "3.4.0" }

[[bin]]
name = "kv-store"
path = "src/bin/main.rs"
